@@ -201,6 +201,8 @@ Changes since 2.2.2
     but before the FOREACH byte-code executes.
 80. src/slstrops.c: The pos argument to the string_match and
     string_matches function was made optional (defaults to 1).
+81. src/slstring.c: Use _pSLuint32_Type instead of unsigned long for
+    hashes since the hash algorithm was designed for 32 bits.
 
 {{{ Previous Versions
 
